--- a/html/webframedesktop.html
+++ b/html/webframedesktop.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fcSDK Documentation</title>
+    <title>Dovetail Web Services Documentation</title>
     <script type="text/javascript" src="script/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="script/jquery-ui-1.8.19.custom.min.js"></script>
     <script type="text/javascript" src="script/jquery.ba-hashchange.min.js"></script>
