--- a/html/webtoc.html
+++ b/html/webtoc.html
@@ -23,7 +23,7 @@
 <body>
 <div id="container" data-icon="false" class="tree">
 <ul id="root" class="root">
-<li rel="-1" isnew="False"><a href="Introduction to fcSDK.html">Introduction to fcSDK</a>
+<li rel="-1" isnew="False"><a href="Introduction.html">Introduction</a>
 <li rel="2"><a href="#">Developer Walkthroughs</a>
 <ul>
 <li rel="-1" isnew="False"><a href="static_html\fcsdk_webservices_walkthrough.html">Walkthrough - Web Services Fundamentals</a>
