--- a/html/Introduction.html
+++ b/html/Introduction.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" value="IE=9" />
   <!--DXMETADATA start type="IsTemplateFileFeatureEnabled" name="Responsive" format="<meta name=""viewport"" content=""width=device-width, initial-scale=1.0"" />" --><meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--DXMETADATA start type="Literal" condition="helpversion:value=3" value="<meta name=""Microsoft.Help.SelfBranded"" content=""true"" />" -->
-  <!--DXMETADATA start type="ItemTitle" format="<title>%%ItemTitle%%</title>" --><title>Introduction to fcSDK</title>
-  <!--DXMETADATA start type="ItemTitle" format="<meta name=""Title"" content=""%%ItemTitleNoQuotes%%""/>" --><meta name="Title" content="Introduction to fcSDK"/>
+  <!--DXMETADATA start type="ItemTitle" format="<title>%%ItemTitle%%</title>" --><title>Introduction</title>
+  <!--DXMETADATA start type="ItemTitle" format="<meta name=""Title"" content=""%%ItemTitleNoQuotes%%""/>" --><meta name="Title" content="Introduction"/>
   <script src="script/jquery-1.7.2.min.js" type="text/javascript" id="mshs_support_script"></script>
   <script src="script/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
   <link rel="styleSheet" type="text/css" href="stylesheets/jquery-ui-1.8.18.custom.css" />
@@ -35,16 +35,6 @@
   <link rel="styleSheet" type="text/css" href="stylesheets/hs-expandcollapse.css"></link>
   <link rel="styleSheet" type="text/css" href="stylesheets/hs-boxes.css"></link>
   <link rel="styleSheet" type="text/css" href="stylesheets/responsive.css"></link>
-  <link rel="styleSheet" type="text/css" href="fcfl_html/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fccc/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fccl/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fccq/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fccs/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fcdr/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fcfo/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fcinter/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/fcsfa/toolkit_styles.css"></link>
-  <link rel="styleSheet" type="text/css" href="toolkit_html/toolkit_styles.css"></link>
   <link rel="styleSheet" type="text/css" href="stylesheets/dotnetstylesheet.css"></link>
   <script src="script/jquery-1.7.2.min.js" type="text/javascript"></script>
   <script src="script/slimbox2.js" type="text/javascript"></script>
