--- a/html/webframetablet.html
+++ b/html/webframetablet.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="script/jquery.cookie.min.js"></script>
     <script type="text/javascript" src="script/webutility.js"></script>
 
-    <script lang="javascript">var defaultTopic="Introduction to fcSDK.html";</script>
+    <script lang="javascript">var defaultTopic="Introduction.html";</script>
     <style type=text/css>frame#webcontent {border-left: 3px solid #426bad;}</style>
 
     <script type="text/javascript" src="script/modernizr.web.custom.min.js"></script>
