fix walkthrough link, replace quotes

--- a/html/static_html/fcsdk_webservices_walkthrough.html
+++ b/html/static_html/fcsdk_webservices_walkthrough.html
@@ -216,11 +216,9 @@ ClarifySessionWS session = application.CreateSession( username, password );<br/>
 <p>There are several methods that can be called on ClarifySessionWS for getting session related information such as
 getting the current time zone.</p>
 
-
-
 <h4>Accessing and Modifying Data using the Web Services Client</h4>
 <p>The ClarifyDataAccessWS class provides a means of doing ClarifyGeneric queries and data modifications.
-Please refer to the <a href="/fcsdk_webservices_dataaccess.html">Accessing Data with the Web Services</a>
+Please refer to the <a href="fcsdk_webservices_dataaccess.html">Accessing Data with the Web Services</a>
 guide for more details.</p>
 
 <h4>Accessing the API Toolkits using the Web Services Client</h4>
@@ -284,13 +282,11 @@ ToolkitResultProtocol result = supportWS.CreateCase(siteIDNum, firstName, lastNa
 			<TR>
 			<TD NOWRAP>
 				<CODE class="VB">
-Console.WriteLine( “IDNum : {0}“, result.IDNum );<br>
-Console.WriteLine( “Objid : {0}“, result.Objid );<br>
-Console.WriteLine( “ReturnCode : {0}“, result.ReturnCode );<br>
+Console.WriteLine("IDNum : {0}", result.IDNum );<br>
+Console.WriteLine("Objid : {0}", result.Objid );<br>
+Console.WriteLine("ReturnCode : {0}", result.ReturnCode );<br>
 </CODE></TD></TR></TABLE></DIV></p>
 </DIV>
-
-
 
 <p>The output should look something like the following:</p>
 <pre>
